# EG-STAT

./: .gitignore  CalcRef.md  LICENSE  Manual.md  README.md  RELEASE NOTE.md  pyproject.toml
egstat/: __init__.py  __main__.py  cli.py  models.py  performance.py  shifts.py  solver.py  ui.py  validate.py
tests/: test_analyze_basic_curves.py  test_cli_analyze.py  test_cli_io.py  test_cli_match.py  test_cli_routing.py  test_io.py  test_performance.py  test_solver_design.py  test_stage0_boot.py  test_stage5_fuel.py  test_ui.py
v0.1.0/: Manual.md  README.md  pyproject.toml
v0.1.0/egstat/: __main__.py  curves.py  io.py  presets.py  units.py  vehicle.py
v0.1.0/tests/: test_cli_design.py  test_cli_presets.py  test_cli_vehicle.py  test_curves.py  test_models_validate.py  test_presets.py  test_shifts.py  test_solver_match.py  test_stage0_boot.py  test_units.py  test_vehicle.py
