[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egstat"
version = "0.2.0"
description = "EG-Stat: engine specification and performance calculator (core-first, CLI-driven)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Huu Tri (Alvin) Phan", email = "alvinphanhuu@gmail.com" }
]

keywords = [
  "engine",
  "automotive",
  "powertrain",
  "simulation",
  "performance",
  "engineering",
  "cli"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]

dependencies = [
  # keep empty for now; core math has no external deps
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black",
  "ruff"
]

[project.scripts]
egstat = "egstat.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["egstat*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
